force-app/main/default/objects/PS_ASU_SP_ENRHLD_V__x.object
<CustomObject>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_SRVC_IND_DATA.EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollment Hold Indicator (external)</relationshipLabel>
        <relationshipName>Enrollment_Hold_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>INFO_INSTRUCT1__c</fullName>
        <description>Data sourced from PS_SRVC_IN_RSN_TBL.DESCRLONG</description>
        <externalDeveloperName>INFO_INSTRUCT1</externalDeveloperName>
        <label>Enrollment Hold Instructions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REASON__c</fullName>
        <description>Data sourced from PS_SRVC_IN_RSN_TBL.DESCR</description>
        <externalDeveloperName>REASON</externalDeveloperName>
        <label>Enrollment Hold Reason</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRVC_IND_CD__c</fullName>
        <description>Data sourced from PS_SERVICE_IMPACT.SRVC_IND_CD</description>
        <externalDeveloperName>SRVC_IND_CD</externalDeveloperName>
        <label>Service Indicator Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STRM__c</fullName>
        <description>Data sourced from PS_SRVC_IND_DATA.SRVC_IND_ACT_TERM</description>
        <externalDeveloperName>STRM</externalDeveloperName>
        <label>Term</label>
        <length>4</length>
        <referenceTargetField>Term__c.PeopleSoft_Code__c</referenceTargetField>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Enrollment Hold Indicator (external)</relationshipLabel>
        <relationshipName>Enrollment_Hold_Indicator_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1Q-pwq1BOOLdw-E4BHw8zXIC7wKXTkyKkFvXV5S0rqzs/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_ENRHLD_V</externalName>
    <label>Enrollment Hold Indicator (external)</label>
    <pluralLabel>Enrollment Hold Indicator (external)</pluralLabel>
</CustomObject>